--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -2,19 +2,20 @@
 
 <div [hidden]="hideRooms">
     Number of Rooms:
-    <div [ngStyle]="{'color': rooms.availableRooms ? 'green' : 'red'}"
-    [innerText]="numberofRooms"></div>
+    <div [ngStyle]="{'color': rooms.availableRooms ? 'green' : 'red'}" [innerText]="numberofRooms"></div>
 </div>
+
+
 
 {{rooms?.availableRooms ?? 'No Rooms'}}
 
-
+<!-- {{roomList | json }} -->
 
 
 <div *ngIf="rooms.availableRooms > 0">
     Rooms List
     <!--{{roomList}}-->
-    <table>
+    <table class="table">
         <tr>
             <th>Even/Odd</th>
             <th>Room Number</th>
@@ -22,15 +23,18 @@
             <th>Amenities</th>
             <th>Price</th>
             <th>Check In Date</th>
+            <th>Rating</th>
         </tr>
         <tr [ngClass]="e ? 'even' : 'odd'"
-        *ngFor="let room of roomList; let e = even; let o = odd; let i = index">
+            *ngFor="let room of roomList | slice : 0:2; let e = even; let o = odd; let i = index">
+            <!-- {{ property | pipe }} -->
             <td>{{e ? "Even" : "Odd"}}</td>
-            <td>{{ room.roomNumber }}</td>
-            <td>{{ room.roomType }}</td>
-            <td>{{ room.amenities }}</td>
-            <td>{{ room.price }}</td>
-            <td>{{ room.checkInTime }}</td>
+            <td>{{ room.roomNumber | percent }}</td>
+            <td>{{ room.roomType | uppercase }}</td>
+            <td>{{ room.amenities | lowercase }}</td>
+            <td>{{ room.price | currency : '€ ' }}</td>
+            <td>{{ room.checkInTime | date }}</td>
+            <td>{{ room.rating | number : '1.0-4' }}</td>
         </tr>
     </table>
 </div>
