--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,13 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+
+.even {
+    background-color: red;
+    color: white;
+}
+.odd {
+    background-color:blue;
+    color:white;
+}
