--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1>Hello World</h1>
+<!-- <hinv-header></hinv-header> -->
 <hinv-rooms></hinv-rooms>
+<div #name>Expecting my Name</div>
+
 
 <!--
 <div [ngSwitch]="role">
@@ -17,4 +20,8 @@
 <!--
 <div ngSwitch="francis"></div>
 -->
-<div></div>
+
+
+<!-- <div>
+    <ng-template #user></ng-template>
+</div> -->
