--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -1,6 +1,6 @@
 <p>rooms-list works!</p>
-
-Rooms List
+<h2>{{ title }}</h2>
+<!-- Rooms List--------- -->
 <!--{{roomList}}-->
 <table class="table">
     <tr>
@@ -14,7 +14,7 @@ Rooms List
         <th>Select Rooms</th>
     </tr>
     <tr [ngClass]="e ? 'even' : 'odd'"
-        *ngFor="let room of rooms | slice : 0:3; let e = even; let o = odd; let i = index">
+        *ngFor="let room of rooms; let e = even; let o = odd; let i = index">
         <!-- {{ property | pipe }} -->
         <td>{{e ? "Even" : "Odd"}}</td>
         <td>{{ room.roomNumber | percent }}</td>
