--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,12 +1,15 @@
 <h1>Welcome to {{hotelName}}</h1>
+<hinv-header></hinv-header>
+<hinv-header></hinv-header>
+<hinv-header></hinv-header>
 
 <div [hidden]="hideRooms">
     Number of Rooms:
-    <div [ngStyle]="{'color': rooms.availableRooms ? 'green' : 'red'}" [innerText]="numberofRooms"></div>
+    <div [ngStyle]="{'color': rooms.availableRooms ? 'green' : 'red'}" [innerText]="numberOfRooms"></div>
 </div>
 
 
-{{rooms?.availableRooms ?? 'No Rooms'}}
+{{ rooms?.availableRooms ?? 'No Rooms' }}
 
 <!-- {{roomList | json }} -->
 <div *ngIf="selectedRoom">
@@ -15,12 +18,14 @@
 </div>
 
 <div>
-    <button (click)="addRoom">Add Room</button>
+    <button (click)="addRoom()">Add Room</button>
 </div>
 
 <div *ngIf="rooms.availableRooms > 0">
     <!--Imports this info from rooms-list.component-->
     <!--Exports it to app.component in the <hinv-rooms component>-->
-    <hinv-rooms-list [rooms]="roomList" (selectedRoom)="selectRoom($event)"></hinv-rooms-list>
+    <hinv-rooms-list [rooms]="roomList" [title]="title"
+    (selectedRoom)="selectRoom($event)"></hinv-rooms-list>
 </div>
+
 <button (click)="toggle()">Toggle</button>
