Main Update May 1 - 2023

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>Hello World</h1>
+<!-- <h1>Hello World</h1> -->
 <!-- <hinv-header></hinv-header> -->
-<hinv-rooms></hinv-rooms><br>
+<!-- <hinv-rooms></hinv-rooms><br> -->
 
 <hinv-container>
     <hinv-rooms></hinv-rooms><br>
